create and join templates

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,5 +6,12 @@
   </head>
   <body>
     <h1>This is the home page</h1>
+    <form method="post" action="/create">
+      <input type="submit" value="Create Channel">
+    </form>
+
+    <form method="post" action="/join">
+      <input type="submit" value="Join Channel">
+    </form>
   </body>
 </html>
