frontend create/join channel

--- a/views/channel.ejs
+++ b/views/channel.ejs
@@ -6,5 +6,7 @@
   </head>
   <body>
     <h1>This is the channel page</h1>
+    <p>Channel ID: <%= channelID %></p>
+    <p>Username: <%= username %></p>
   </body>
 </html>
