--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Home</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/css/style.css' />
   </head>
   <body>
     <h1>This is the home page</h1>
