--- a/views/channel.ejs
+++ b/views/channel.ejs
@@ -12,7 +12,8 @@
     <p>Channel ID: <%= channelID %></p>
     <p>Username: <%= username %></p>
 
-    <h2>Send a message to the server</h2>
+    <h2>Ping the server</h2>
+    <input id="ping" type="submit" name="Ping the server">
 
     <div hidden>
       <div id="channelID"><%= channelID %></div>
