--- a/views/channel.ejs
+++ b/views/channel.ejs
@@ -13,7 +13,7 @@
     <p>Username: <%= username %></p>
 
     <h2>Ping the server</h2>
-    <input id="ping" type="submit" name="Ping the server">
+    <input id="ping" type="submit" value="Ping the server">
 
     <div hidden>
       <div id="channelID"><%= channelID %></div>
